# snoopi-project

./: README.md
captcha-resolver-api/: pyproject.toml
captcha-resolver-api/app/: main.py
chrome-extension/: content.js  manifest.json  popup.html  popup.js
